// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders with color error 1`] = `
<div
  className="ax-alert ax-alert--error ax-theme--light"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders with color info 1`] = `
<div
  className="ax-alert ax-alert--info ax-theme--light"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders with color success 1`] = `
<div
  className="ax-alert ax-alert--success ax-theme--light"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders with color warning 1`] = `
<div
  className="ax-alert ax-alert--warning ax-theme--light"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders with defaultProps 1`] = `
<div
  className="ax-alert ax-alert--info ax-theme--light"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders with onRemoveClick 1`] = `
<div
  className="ax-alert ax-alert--info ax-theme--light"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--small ax-grid--gutters-vertical--small ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem ipsum
      </div>
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <a
          className="ax-link ax-link--style-light"
          onClick={[Function]}
        >
          <svg
            className="ax-icon ax-icon--cross"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M9.5 8L13 4.5 11.5 3 8 6.5 4.5 3 3 4.5 6.5 8 3 11.5 4.5 13 8 9.5l3.5 3.5 1.5-1.5L9.5 8z\\" fill-rule=\\"nonzero\\" fill=\\"currentColor\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
